# Prog2

./: CMakeLists.txt  README.md  main.cpp  menu.cpp  menu.h
cmake/: FindStrophoid.cmake
